<resources>

    <string name="app_name">Logistyka</string>

    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_startup">MainActivity</string>

    <string name="address_details">Adres zlecenia</string>
    <string name="contact_details">Telefon kontaktowy</string>
    <string name="job_type_details">Rodzaj zlecenia</string>
    <string name="cash_details">Gotówka do pobrania</string>
    <string name="info_details">Uwagi</string>
    <string name="navi_details">Nawigacja</string>
    <string name="ended_details">Zakończone</string>
    <string name="not_ended_details">Nie zakończone</string>
    <string name="size_details">Rozmiar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Powiadomienia</string>

    <string name="pref_title_ringtone">Dźwięk</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Wibracje</string>
    <string name="ok">Zakończ</string>
    <string name="cancel">Anuluj</string>
    <string name="end_job_dialog">Zakończ zlecenie</string>
    <string name="type_details">Typ</string>

</resources>
